...

object LoginTags {
    const val EMAIL_FIELD = "login_email_field"
    const val PASSWORD_FIELD = "login_password_field"
    const val LOGIN_SUBMIT_BUTTON = "login_submit_button"
    const val SIGNUP_SUBMIT_BUTTON = "signup_submit_button"
    const val GUEST_BUTTON = "login_guest_button"
    const val LOGIN_SIGNUP_BUTTON = "login_signup_button"
}

